# LightBender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
rendererings/xwing/: x-wing_back.ppm  x-wing_both.ppm  x-wing_direct.ppm  x-wing_front.ppm
renderings/xwing/: x-wing_under.ppm
renderings/xwing/ppm/: x-wing_indirect.ppm
res/ptx/: cudaLightBender_generated_Box.cu.ptx  cudaLightBender_generated_Brdf.cu.ptx  cudaLightBender_generated_Cameras.cu.ptx  cudaLightBender_generated_OptixRenderer.cu.ptx  cudaLightBender_generated_Parallelogram.cu.ptx
run/: cleanUnix.sh  cleanWin.cmd  unixConfigureAndBuild.sh  winConfigureAndBuild.cmd
run/models/curiosity_rover/: ReadMe.TXT  RefMap.iff  Rover.lws  Tinfoil.tga
run/models/tie_interceptor/: readme.txt
run/models/tie_interceptor/obj_format/: tie_interceptor.mtl
run/models/x-wing/: star_wars_x-wing.mtl
run/models/x_wing/: x-wing.mtl
src/exec/: LightBender.cpp
src/io/: LightBenderCallback.cpp  LightBenderCallback.hpp  LightBenderIOHandler.cpp  LightBenderIOHandler.hpp
src/renderers/: RendererInterface.hpp  RendererObjects.hpp  commonStructs.h
src/renderers/gpu/: OptixAdvancedScene.cpp  OptixAdvancedScene.hpp  OptixBasicScene.cpp  OptixBasicScene.hpp  OptixBoxScene.cpp  OptixBoxScene.hpp  OptixFileScene.cpp  OptixFileScene.hpp  OptixModelScene.cpp  OptixModelScene.hpp  OptixRenderer.cpp  OptixRenderer.hpp  OptixScene.cpp  OptixScene.hpp  OptixSphereScene.cpp  OptixSphereScene.hpp
src/renderers/gpu/cuda/: Box.cu  Brdf.cu  Cameras.cu  OptixRenderer.cu  Parallelogram.cu  path_tracer.h  random.h
src/renderers/gpu/cuda/primitives/: Box.cu  Parallelogram.cu  Sphere.cu  TriangleMesh.cu
src/testing/: ExampleUnitTests.cpp  PathMathUnitTests.cpp
src/testing/matlab/: sampleHalfSphere.m  sampleSolidAngle.m  sampleSphere.m  sampleTests.m
